// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test API layer > getServerSideProps() for route '/pokemon/pikachu' matches snapshot props 1`] = `
{
  "props": {
    "searchProps": {
      "page": 1,
      "pageSize": 25,
      "pokemonList": [],
      "pokemonName": "pikachu",
      "searchTerm": "",
      "total": 0,
    },
  },
}
`;

exports[`Test API layer > getServerSideProps() for router '/' matches snapshot props 1`] = `
{
  "props": {
    "searchProps": {
      "page": 1,
      "pageSize": 25,
      "pokemonList": [],
      "pokemonName": "",
      "searchTerm": "",
      "total": 0,
    },
  },
}
`;
